@@ -25,6 +25,45 @@ function responsive_update_social_icon_options() {
 
 add_action( 'after_setup_theme', 'responsive_update_social_icon_options' );
 
+/*
+ * Update page templete meta data
+ *
+ * E.g: Change from `page-templates/full-width-page.php` to `full-width-page.php`
+ *
+ * This function only needes to be run once but it does not mater when. after_setup_theme should be fine.
+ *
+ */
+function responsive_update_page_template_meta(){
+
+	$args = array (
+		'post_type' => 'page',
+		'meta_query'  => array(
+			array(
+				'key'     => '_wp_page_template',
+				'value'   => 'default',
+				'compare' => '!='
+			)
+		)
+	);
+
+	$pages = get_pages( $args );
+
+	foreach ( $pages as $page ) {
+
+		$meta_value = get_post_meta( $page->ID, '_wp_page_template', true );
+		$page_templates_dir = 'page-templates/';
+		$pos = strpos( $meta_value, $page_templates_dir );
+
+		if ( $pos !== false ) {
+			$meta_value = basename( $meta_value );
+			update_post_meta( $page->ID, '_wp_page_template', $meta_value );
+		}
+
+	}
+
+}
+add_action( 'switch_theme', 'responsive_update_page_template_meta' );
+
 /**
  * Responsive 2.0 update check
  *
