@@ -23,8 +23,8 @@ if( !defined( 'ABSPATH' ) ) {
 <?php if( !is_page() && !is_search() ) { ?>
 
 	<div class="post-data">
-		<?php the_tags( __( 'Tagged with:', 'responsive' ) . ' ', ', ', '<br />' ); ?>
 		<?php printf( __( 'Posted in %s', 'responsive' ), get_the_category_list( ', ' ) ); ?>
+		<?php the_tags( __( 'Tagged with:', 'responsive' ) . ' ', ', ', '<br />' ); ?>
 	</div><!-- end of .post-data -->
 
 <?php } ?>
